kubernetes/radarr-4k/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-4k
  namespace: radarr-4k
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr-4k
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr-4k
    spec:
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: k8s-wk-0
      containers:
        - name: radarr-4k
          image: lscr.io/linuxserver/radarr:6.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: radarr-4k-config
              mountPath: /config
            - name: media
              mountPath: /media
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: radarr-4k-config
          persistentVolumeClaim:
            claimName: radarr-4k-config-v2
        - name: media
          nfs:
            server: 192.168.1.100
            path: /mnt/epool/media
