kubernetes/radarr-4k/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-4k-postgres
  namespace: radarr-4k
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr-4k-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
