kubernetes/radarr-4k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-4k
  namespace: radarr-4k
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr-4k
  ports:
    - name: http
      port: 7878
      targetPort: http
      protocol: TCP
